--- a/secondproject/templates/base.html
+++ b/secondproject/templates/base.html
@@ -40,6 +40,9 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'por_home' %}">Portfolio</a>
+                        <a class="dropdown-item" href="{% url 'signup' %}" tabindex="-1" aria-disabled="true">회원가입</a>
+                        <a class="dropdown-item" href="{% url 'login' %}" tabindex="-1" aria-disabled="true">로그인</a>
+                        <a class="dropdown-item" href="{% url 'logout' %}" tabindex="-1" aria-disabled="true">로그아웃</a>
                     </div>
                 </li>
                 <li class="nav-item">
